--- a/Informatique spé/C03/cours.tex
+++ b/Informatique spé/C03/cours.tex
@@ -114,7 +114,7 @@
 
 \begin{definition}{3.23}{couplage parfait}
     Soit $G = (S,A)$ un graphe non orienté. Un couplage $C \subset A$ de $G$ est dit \notion{parfait} s'il recouvre tous les sommets de $G$~:
-    $$\forall s \in S,\, \exists a \in A,\, s\in a$$
+    $$\forall s \in S,\, \exists a \in C,\, s\in a$$
 \end{definition}
 
 \input{../../stock/pied.tex}
