--- a/truc.tex
+++ b/truc.tex
@@ -1,7 +1,13 @@
-\documentclass{article}
-\usepackage[utf8]{inputenc}
-\usepackage{graphicx}
+\input{stock/en-tete_v4.tex}
 \begin{document}
-\Huge % Vous pouvez ajuster la taille avec \huge, \LARGE, etc.
-ï : ; é i j ? ! =
-\end{document}
+\begin{adjustwidth}{-3cm}{-3cm}
+\input{stock/commands.tex}
+
+Bonsoir monsieur,
+
+Suite à un DS désastreux, j'ai décidé de prendre ma revanche sur des exercices du chapitre 8, et en particulier sur le 8.5, dont la correction n'a pas été faite en cours (me semble-t-il). J'arrive à me ramener à la somme :
+$$\sum_{n=0}^{+\infty}\sum_{i=0}^{+\infty}z^{i2^{n+1}+2^n}$$
+mais impossible d'aller plus loin. Mon ami de tous les jours ChatGPT me propose de remarquer que toutes les puissances de 2 sont couvertes une unique fois dans la somme, mais je n'arrive pas à m'en convaincre. Auriez-vous une piste ?
+Merci d'avance, bonne soirée.
+
+\input{stock/pied.tex}
