--- a/maths spé/C09/cours.tex
+++ b/maths spé/C09/cours.tex
@@ -52,4 +52,19 @@
     Soit $I$ un intervalle de $\R$ et $f$ une fonction définie sur $I$. \notion{$f$ est continue par morceaux} si toute restriction de $f$ à un segment est continue par morceaux.
 \end{definition}
 
+\begin{theoreme}{9.43}{$\mr{Esc}(\seg{a}{b},F)$ dense dans $\mc{CM}(\seg{a}{b},F)$ pour $\norme{\cdot}_\infty$}
+    Toute fonction continue par morceaux sur $\seg{a}{b}$ est limite uniforme d'une suite de fonctions en escalier sur $\seg{a}{b}$~:
+    $$\overline{\mc{E}(\seg{a}{b},F)} = \mc{CM}(\seg{a}{b},F)$$
+\end{theoreme}
+
+\begin{theoreme}{9.47}{premier de Weierstrass}
+    Toute fonction continue sur $\seg{a}{b}$, à valeurs réelles ou complexes, est limite uniforme d’une suite de fonctions polynomiales sur $\seg{a}{b}$
+\end{theoreme}
+
+\begin{theoreme}{9.49}{deuxième de Weierstrass}
+    Toute fonction continue sur $\R$, à valeurs réelles ou complexes, $T$-périodique est limite uniforme d’une suite de \notion{fonctions polynomiales trigonométriques}, fonctions de la forme~:
+    $$t \mapsto \sum_{k=1}^n \alpha_k e^{\frac{2ik\pi}{T}t}$$
+
+\end{theoreme}
+
 \input{../../stock/pied.tex}
