--- a/physique spé/Induction/cours.tex
+++ b/physique spé/Induction/cours.tex
@@ -12,6 +12,11 @@
     Par leurs conséquences, les phénomènes d’induction tendent à atténuer leurs causes.
 \end{theoreme}
 
-
+\begin{definition}{7.3}{force de Laplace}
+    Un tronçon élémentaire de conducteur parcouru par un courant $i$ indépendant d'un champ $\vec{B}$ extérieur le traversant subit une force appelée \notion{force de Laplace}~:
+    $$\vec{\d{F_\mc{L}}} = i\vec{\d{\ell}}\wedge \vec{B}$$
+    Le vecteur déplacement élémentaire $\vec{\d{\ell}}$ est ici dirigé dans le sens de $i$. Pour un tronçon d'extrémités $M_1$ et $M_2$~:
+    $$\vec{F_\mc{L}} = \int_{M_1}^{M_2} i\vec{\d{\ell}}\wedge \vec{B}$$
+\end{definition}
 
 \input{../../stock/pied.tex}
