--- a/maths spé/C10/cours.tex
+++ b/maths spé/C10/cours.tex
@@ -19,6 +19,24 @@
 \end{theoreme}
 
 \begin{definition}{10.30}{intégrale d'une fonction continue par morceaux}
-    Soit $E$ un espace vectoriel normé de dimension finie, $f \in \mc{C}\mc{M}(\seg{a}{b}, E)$. Il existe par densité de $\mc{E}(\seg{a}{b}, E)$ dans $\mc{C}\mc{M}(\seg{a}{b}, E)$ une suite $(\varphi_n)_{n \in \N}$ de fonctions de $\mc{E}(\seg{a}{b})$ convergeant uniformément vers $f$. On appelle \notion{intégrale de $f$ sur $\seg{a}{b}$}, notée $\displaystyle\int_{\seg{a}{b}} f$ le vecteur $\displaystyle\lim_{n \to + \infty} \int_{\seg{a}{b}}\varphi_n$. Cette intégrale ne dépend pas de la suite de $\mc{E}(\seg{a}{b})^\N$ choisie.
+    Soit $E$ un espace vectoriel normé de dimension finie, $f \in \mc{C}\mc{M}(\seg{a}{b}, E)$. Il existe par densité de $\mc{E}(\seg{a}{b}, E)$ dans $\mc{C}\mc{M}(\seg{a}{b}, E)$ une suite $(\varphi_n)_{n \in \N}$ de fonctions de $\mc{E}(\seg{a}{b})$ convergeant uniformément vers $f$. On appelle \notion{intégrale de $f$ sur $\seg{a}{b}$} le vecteur~:
+    $$\int_{\seg{a}{b}} f = \lim_{n \to + \infty} \int_{\seg{a}{b}}\varphi_n$$
+    Cette intégrale ne dépend pas de la suite de $\mc{E}(\seg{a}{b})^\N$ choisie.
 \end{definition}
+
+\begin{theoreme}{10.35}{fondamental du calcul intégral}
+    Soit $f$ une fonction continue sur un intervalle $I$, à valeurs dans un espace vectoriel $E$ de dimension finie. Pour tout $a\in I$, l'application~:
+    \fonction{F}{I}{\R}{x}{\inte{a}{x}f(t)\d{t}}
+    est l'unique primitive de $f$ (sa dérivée est $f$) s'annulant en $a$. $F$ est donc de classe $\mc{C}^1$.
+\end{theoreme}
+
+\begin{theoreme}{10.39}{changement de variable}
+    Soit $f:\seg{a}{b}\to E$ continue et $\varphi$ un $\mc{C}^1$-difféomorphisme de $\seg{a}{b}$ sur $\seg{\varphi(a)}{\varphi(b)}$.
+    $$\inte{\varphi(a)}{\varphi(b)}f(x)\d{x} = \inte{a}{b}f\Bigl(\varphi(t)\Bigr)\varphi'(t)\d{t}$$
+\end{theoreme}
+
+\begin{theoreme}{10.42}{intégration d'un $o$}
+    Soit $I$ un intervalle et $E$ de dimension finie. Soit $f:I \to E$ de classe $\mc{C}^1$ et $g:I\to \R_+$ de classe $\mc{C}^1$. Supposons pour $a \in I$ que $f' \underset{a}{=}o(g')$. Alors~:
+    $$\norme{f(x) - f(a)}_E \underset{x \to a}{=} o\Big(\big\vert g(x) - g(a) \big\vert\Big)$$
+\end{theoreme}
 \input{../../stock/pied.tex}
