--- a/maths spé/C11/cours.tex
+++ b/maths spé/C11/cours.tex
@@ -26,4 +26,21 @@
     
 \end{theoreme}
 
+\begin{proposition}{11.8}{rayon de convergence de $\sum_n n^\alpha z^n$}
+    Pour tout $\alpha \in \R$, le rayon de convergence de la série entière $\sum_n n^\alpha z^n$ vaut $1$.
+\end{proposition}
+
+\begin{proposition}{11.11 (1)}{comparaison de séries entières par inégalité}
+    Soit $\sum_n a_n z^n$ et $\sum_n b_n z^n$ deux séries entières de rayons de convergence respectifs $R_a$ et $R_b$. Si à partir d'un certain rang $\abs{a_n} \leq \abs{b_n}$, alors $R_a \geq R_b$.
+\end{proposition}
+
+\begin{proposition}{11.11 (2)}{comparaison de séries entières par domination}
+    Soit $\sum_n a_n z^n$ et $\sum_n b_n z^n$ deux séries entières de rayons de convergence respectifs $R_a$ et $R_b$. \\Si $a_n \underset{n \to +\infty}{=}\mc{O}\Big(b_n\Big)$, alors $R_a \geq R_b$.
+\end{proposition}
+
+\begin{proposition}{11.11 (3)}{comparaison de séries entières par équivalence}
+    Soit $\sum_n a_n z^n$ et $\sum_n b_n z^n$ deux séries entières de rayons de convergence respectifs $R_a$ et $R_b$. \\Si $a_n \underset{n \to +\infty}{\sim}b_n$, alors $R_a = R_b$.
+\end{proposition}
+
+
 \input{../../stock/pied.tex}
