--- a/maths spé/C10/cours.tex
+++ b/maths spé/C10/cours.tex
@@ -104,6 +104,6 @@
         \item pour tout $i \in \intint{0}{k-1}$, la suite $(f_n^{(i)})_{n \in \N}$ converge simplement vers une fonction $f_i \in \mc{CM}(I,E)$
         \item $(f_n^{(k)})_{n \in \N}$ converge uniformément vers une même fonction $g$ sur tout segment inclus dans $I$.
     \end{enumeratebf}
-    la fonction $f$ est de classe $\mc{C}^k(I,E)$ et $f^{(k)} = g$.
+    la fonction $f_0$ est de classe $\mc{C}^k(I,E)$ et $f^{(k)} = g$.
 \end{theoreme}
 \input{../../stock/pied.tex}
