--- a/maths spé/C10/cours.tex
+++ b/maths spé/C10/cours.tex
@@ -36,7 +36,7 @@
 \end{theoreme}
 
 \begin{theoreme}{10.42}{intégration d'un $o$}
-    Soit $I$ un intervalle et $E$ de dimension finie. Soit $f:I \to E$ de classe $\mc{C}^1$ et $g:I\to \R_+$ de classe $\mc{C}^1$. Supposons pour $a \in I$ que $f' \underset{a}{=}o(g')$. Alors~:
+    Soit $I$ un intervalle et $E$ de dimension finie. Soit $f:I \to E$ de classe $\mc{C}^1$ et $g:I\to \R$ de classe $\mc{C}^1$ avec $g' \geq 0$. Supposons pour $a \in I$ que $f' \underset{a}{=}o(g')$. Alors~:
     $$\norme{f(x) - f(a)}_E \underset{x \to a}{=} o\Big(\big\vert g(x) - g(a) \big\vert\Big)$$
 \end{theoreme}
 
